<package>
  <name>rviz_touch_screen_plugins</name>
  <version>0.11.0</version>
  <description>
     RViz plugins optimized for touch screens.
  </description>
  <maintainer email="julien.kindle@gmail.com">Julien Kindle</maintainer>
  <license>BSD</license>

  <author email="julien.kindle@gmail.com">Julien Kindle</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>